# quam

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test_channel_ports_docs.py
.github/workflows/: deploy_docs.yaml  gh_pages_ci.yaml  quam_test.yaml  release.yaml  release_github.yaml  release_pypi.yaml  reusable-build.yaml  reusable-buld.yaml
API_references/: index.html
API_references/_version/: index.html
API_references/components/basic_quam/: index.html
API_references/components/basic_quam_API/: index.html
API_references/components/channels/: index.html
API_references/components/channels_API/: index.html
API_references/components/hardware/: index.html
API_references/components/hardware_API/: index.html
components/: index.html
components/channel-ports/: index.html
components/channels/: index.html
components/custom-components/: index.html
components/octave/: index.html
components/pulses/: index.html
components/quam-root/: index.html
components/qubits-and-qubit-pairs/: index.html
cryomux.egg-info/: PKG-INFO  top_level.txt
demonstration/: index.html
docs/: custom-components.md  demonstration.md  gen_ref_pages.py  getting-started.md  getting_started.md  index.md  installation.md  migrating-to-quam.md  quam-references.md  quam_references.md
docs/API_references/: index.md
docs/api/: index.md
docs/components/: channel-ports.md  channels.md  custom-components.md  index.md  octave.md  pulses.md  quam-root.md  qubits-and-qubit-pairs.md
docs/demonstration/: QuAM features.ipynb
docs/examples/: Gate-Level Operations.ipynb  QuAM features.ipynb  Qubit operations.ipynb  Qubits and gates.ipynb
docs/features/: gate-level-operations.md  index.md  quam-references.md  serialization.md  transient-state.md
docs/stylesheets/: extra.css
examples/: Gate-Level Operations.ipynb  QUAM features.ipynb
features/: index.html
features/gate-level-operations/: index.html
features/quam-references/: index.html
features/serialization/: index.html
installation/: index.html
migrating-to-quam/: index.html
quam/: __init__.py  _version.py
quam/components/: __init__.py  basic_quam.py  channels.py  general.py  hardware.py  octave.py  ports.py  pulses.py  quam.py  qubit.py  qubit_pair.py  resonators.py  superconducting_qubits.py  virtual_gate_set.py
quam/config/: __init__.py  __main__.py  resolvers.py  validators.py  vars.py
quam/core/: __init__.py  deprecations.py  operations_registry.py  qua_config_template.py  quam_classes.py  quam_dataclass.py  quam_instantiation.py  transient.py  utils.py
quam/examples/: QuAM features.ipynb  generate_superconducting_quam.py
quam/serialisation/: base.py  json.py
quam/utils/: __init__.py  config.py  dataclass.py  exceptions.py  general.py  pulse.py  qua_types.py  reference_class.py  state_tracker.py  state_update_tracker.py  string_reference.py  type_checking.py
quam_components.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quam_components/components/: __init__.py  general.py  pulses.py  quam.py  resonators.py  superconducting_qubits.py
quam_components/core/: __init__.py  qua_config.py  qua_config_template.json  qua_config_template.py  quam_base.py  quam_classes.py  quam_dataclass.py  quam_element.py  quam_instantiation.py  utils.py
quam_components/examples/: QuAM features.ipynb  generate_quam.py  generate_superconducting_quam.py
quam_components/serialisation/: __init__.py  base.py  json.py  json_serialiser.py
quam_components/serialise/: __init__.py
quam_components/serialisers/: base.py  json_serialiser.py
quam_components/tests/: quam_test.json  test_instantiation.py  test_quam_base.py
quam_components/utils/: pulse.py  reference_class.py  string_reference.py
search/: search_index.json
src/examples/: generate_superconducting_quam.py
tests/: conftest.py  test_instantiation.py  test_pulses.py  test_quam_base.py  test_quam_dict.py  test_quam_dict_component.py  test_quam_get_attrs.py  test_quam_list_component.py  test_quam_referencing.py  test_quam_superconducting.py  test_serialisation.py  test_to_dict.py
tests/components/: test_basic_quam.py  test_hybrid_channel_component.py  test_in_out_IQ_channel.py  test_octave.py  test_pulses.py  test_quam_superconducting.py  test_qubit.py  test_readout_resonator.py  test_transmon.py  test_virtual_gate_set.py
tests/config/: test_config_command.py  test_config_final_actions.py  test_config_include_defaults.py  test_config_migration_v2_v3.py  test_config_settings.py  test_include_defaults_config.py  test_migrate_command.py  test_resolvers.py  test_v1_v2_migration.py  test_v2_v3_migration.py  test_validators.py
tests/gate_implementations/: test_method_gate_implementations.py
tests/instantiation/: test_error_messages.py  test_instantiate_explicit_class.py  test_instantiation.py  test_instantiation_deprecation.py
tests/macros/: test_method_macro.py  test_pulse_macro.py
tests/operations/: conftest.py  test_function_properties.py  test_operations.py  test_register_operations.py
tests/quam_base/: test_multiple_quam.py  test_quam_base.py  test_quam_dataclass.py  test_quam_dict.py  test_quam_get_attrs.py  test_quam_list.py  test_quam_parent.py  test_reference_chains.py  test_set_at_reference.py  test_skip_save_metadata.py  test_to_dict.py  test_to_dict_with_defaults_config.py  test_transient_state.py  test_val_matches_attr_annotation.py  test_value_annotation.py
tests/serialisation/: test_circular_type_serialization.py  test_forward_references.py  test_json_serialisation.py  test_json_serialisatoin.py  test_save_with_defaults_config.py
tests/test_quam_base/: test_quam_base.py  test_val_matches_attr_annotation.py
tests/test_serialisation/: test_load.py  test_serialisation.py
tests/utils/: test_add_amplitude_scale_to_pulse_name.py  test_get_full_class_path.py  test_get_quam_class.py  test_join_references.py  test_pulse_utils.py  test_reference_class.py  test_state_tracker.py  test_string_reference.py  test_type_is_optional.py  test_validate_obj_type.py
(+177 files in other folders)
